packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_for_loop_with_table_unpack_iterator.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"for { a, b } in a do end\".chars().collect())"
---
- value:
    Expression:
      For:
        lhs:
          - value:
              TableUnpack:
                elements:
                  - value:
                      Valid:
                        key:
                          value:
                            Int: 1
                          start:
                            line: 1
                            column: 7
                          end:
                            line: 1
                            column: 8
                        variable:
                          value:
                            Symbol: a
                          start:
                            line: 1
                            column: 7
                          end:
                            line: 1
                            column: 8
                    start:
                      line: 1
                      column: 7
                    end:
                      line: 1
                      column: 8
                  - value:
                      Valid:
                        key:
                          value:
                            Int: 2
                          start:
                            line: 1
                            column: 10
                          end:
                            line: 1
                            column: 11
                        variable:
                          value:
                            Symbol: b
                          start:
                            line: 1
                            column: 10
                          end:
                            line: 1
                            column: 11
                    start:
                      line: 1
                      column: 10
                    end:
                      line: 1
                      column: 11
            start:
              line: 1
              column: 5
            end:
              line: 1
              column: 13
        enumerable:
          value:
            Symbol: a
          start:
            line: 1
            column: 17
          end:
            line: 1
            column: 18
        body: []
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 25
