packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_format_string.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"'{1}'\".chars().collect())"
---
- value:
    Expression:
      String:
        segments:
          - Valid: ""
          - Valid: ""
        arguments:
          - value:
              Int: 1
            start:
              line: 1
              column: 3
            end:
              line: 1
              column: 4
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 6
