packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_format_string_with_multiple_parts.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate ::\ntokenise_and_parse(\"'first{1}second{2}third{3}last'\".chars().collect())"
---
- value:
    Expression:
      String:
        segments:
          - Valid: first
          - Valid: second
          - Valid: third
          - Valid: last
        arguments:
          - value:
              Int: 1
            start:
              line: 1
              column: 8
            end:
              line: 1
              column: 9
          - value:
              Int: 2
            start:
              line: 1
              column: 17
            end:
              line: 1
              column: 18
          - value:
              Int: 3
            start:
              line: 1
              column: 25
            end:
              line: 1
              column: 26
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 32
