packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__expressions__tests__should_parse_function_definition.snap
---
source: packages/moonjuice-parser/src/tests/expressions.rs
expression: "$crate :: tokenise_and_parse(\"fn() end\".chars().collect())"
---
- value:
    Expression:
      Function:
        parameters: []
        body: []
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 9
